--- a/cliff.toml
+++ b/cliff.toml
@@ -83,5 +83,5 @@ sort_commits = "newest"
 [bump]
 features_always_bump_minor = false
 breaking_always_bump_major = false
-initial_tag = "0.0.0"
+initial_tag = "v0.0.0"
 bump_type = "patch"
