--- a/crates/hello_world/Cargo.toml
+++ b/crates/hello_world/Cargo.toml
@@ -9,10 +9,13 @@ repository.workspace = true
 [[bin]]
 name = "hello_world"
 path = "src/main.rs"
+[[bin]]
+name = "hello_world2"
+path = "src/bin.rs"
 
 [dependencies]
-clap.workspace = true
-tokio.workspace = true
+# clap.workspace = true
+# tokio.workspace = true
 
 [features]
 default = []
