--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,52 +6,113 @@ on:
       - main
     tags:
       - 'v*'
+  pull_request:
+    types: [opened, synchronize, reopened]
   workflow_dispatch:
+    inputs:
+      release:
+        type: boolean
 
 jobs:
-  release:
-    if: startsWith(github.ref, 'refs/tags/v')
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
+  # release:
+  #   needs: [pre_release]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@v5
+  #       with:
+  #         name: release
+  #     - run: ls -R
+  # pre_release:
+  #   if: startsWith(github.ref, 'refs/tags/v') || github.event.inputs.release
+  #   needs: [build]
+  #   strategy:
+  #     matrix:
+  #       target:
+  #         - x86_64-unknown-linux-gnu
+  #         - x86_64-pc-windows-msvc
+  #         - aarch64-apple-darwin
+  #       include:
+  #         - target: x86_64-unknown-linux-gnu 
+  #           runner: ubuntu-latest
+  #           os: linux
+  #           arch: x86_64
+  #         - target: x86_64-pc-windows-msvc
+  #           runner: windows-latest
+  #           os: windows
+  #           arch: x86_64
+  #         - target: aarch64-apple-darwin
+  #           runner: macos-latest
+  #           os: darwin
+  #           arch: aarch64
+  #   runs-on: ${{ matrix.runner }}
+  #   steps:
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@v5
+  #       with:
+  #         name: ${{ github.event.repository.name }}-${{ runner.os }}-${{ runner.arch }}
+
+  #     - name: Create release files (Linux and Mac)
+  #       if: matrix.target != 'x86_64-pc-windows-msvc'
+  #       run: |
+  #         for file in $(find . -type f); do
+  #           name="$(basename $file)-${{ matrix.target }}.zip"
+  #           zip -r "${name}" "$file"
+  #           shasum -a 256 "${name}" > "${name}.sha256sum"
+  #         done
+
+  #     - name: Create release files (Windows)
+  #       if: matrix.target == 'x86_64-pc-windows-msvc'
+  #       run: |
+  #         foreach ($item in Get-ChildItem) {
+  #           $name = "$($item.Name)-${{ matrix.target }}.zip"
+  #           Compress-Archive -Path $item.FullName -DestinationPath $name
+  #           Get-FileHash $name -Algorithm SHA256 > "$name.sha256sum"
+  #         }
+
+  #     - name: Upload a Build Artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: release
+  #         path: |
+  #           *.zip
+  #           *.sha256sum
+  #         retention-days: 1
 
   build:
     permissions:
-      contents: write
-      packages: write
+      contents: read
     strategy:
       matrix:
-        runner:
-          - ubuntu-latest
         target:
           - x86_64-unknown-linux-gnu
-          - x86_64-pc-windows-gnu
+          - x86_64-pc-windows-msvc
           - aarch64-apple-darwin
         include:
+          - target: x86_64-unknown-linux-gnu 
+            runner: ubuntu-latest
+            os: linux
+            arch: x86_64
           - target: x86_64-pc-windows-msvc
             runner: windows-latest
+            os: windows
+            arch: x86_64
           - target: aarch64-apple-darwin
-            runner: 'macos-latest'
-        exclude:
-          - target: x86_64-pc-windows-msvc
-            runner: windows-latest 
-          - target: aarch64-apple-darwin
-            runner: ${{ vars.NATIVE_RUNNER == 'true' && 'ubuntu-latest' || 'macos-latest' }}
-
+            runner: macos-latest
+            os: darwin
+            arch: aarch64
     runs-on: ${{ matrix.runner }}
+    env:
+      release: ${{ startsWith(github.ref, 'refs/tags/v') || github.event.inputs.release }}
     steps:
       - uses: denoland/setup-deno@v2
 
-      # https://github.com/actions/cache/blob/main/examples.md#deno 
       # https://github.com/actions/cache/blob/main/examples.md#rust---cargo
       - name: Restore build cache
         uses: actions/cache@v4
         with:
-          key: ${{ runner.name }}-${{ matrix.target }}-build
+          key: ${{ matrix.target }}-build
           path: |
-            ~/.cache/deno
             ~/.cargo/bin/
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
@@ -59,51 +120,31 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Install cross
-        if: ${{ runner.os == 'Linux' && matrix.target != 'x86_64-unknown-linux-gnu' }}
-        run: ./scripts/ci.ts install-cross
-
-      - name: Pull or build and push docker image for macOS
-        if: ${{ runner.os == 'Linux' && matrix.target == 'aarch64-apple-darwin' }}
-        run: ./scripts/ci.ts aarch64-apple-darwin
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build
-        if: ${{ runner.os == 'Linux' }}
-        run: |
-          ${{ matrix.target == 'x86_64-unknown-linux-gnu' && 'cargo' || 'cross' }} build \
-            --verbose \
-            --release \
-            --target ${{ matrix.target }}
-
-      - name: Build (Mac and Windows runners)
-        if: ${{ runner.os != 'Linux' }}
         run: cargo build --verbose --release --target ${{ matrix.target }}
 
       - name: Test
-        if: ${{ runner.os == 'Linux' && matrix.target != 'aarch64-apple-darwin' }}
-        run: |
-          ${{ matrix.target == 'x86_64-unknown-linux-gnu' && 'cargo' || 'cross' }} test \
-            --verbose \
-            --release \
-            --target ${{ matrix.target }}
-
-      - name: Test (Mac and Windows runners)
-        if: ${{ runner.os != 'Linux' }}
-        run: |
-          cargo test --verbose --release --target ${{ matrix.target }}
+        run: cargo test --verbose --release --target ${{ matrix.target }}
 
       - name: Find bin paths
         id: find_bin_paths
+        shell: bash # need to use bash for compatibility with all OS
         run: |
           echo 'paths<<EOF' >> $GITHUB_OUTPUT
           find target/${{ matrix.target }}/release -maxdepth 1 -type f -perm -111 >>$GITHUB_OUTPUT
           echo 'EOF' >> $GITHUB_OUTPUT
 
+      - name: Pre-release
+        if: env.release
+        id: pre_release
+        run: deno run -A ./scripts/release/04_prepare_release_files.ts
+        env:
+          BIN_PATHS: ${{ steps.find_bin_paths.outputs.paths }}
+          TARGET: ${{ matrix.target }}
+
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.target }}
-          path: ${{ steps.find_bin_paths.outputs.paths }}
+          name: ${{ github.event.repository.name }}-${{ runner.os }}-${{ runner.arch }}${{ github.event_name == 'pull_request' && join('-', github.event.pull_request.number) || '' }}
+          path: ${{ env.release && steps.pre_release.outputs.paths || steps.find_bin_paths.outputs.paths }}
           retention-days: 1
