--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,71 +14,6 @@ on:
         type: boolean
 
 jobs:
-  # release:
-  #   needs: [pre_release]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Download artifact
-  #       uses: actions/download-artifact@v5
-  #       with:
-  #         name: release
-  #     - run: ls -R
-  # pre_release:
-  #   if: startsWith(github.ref, 'refs/tags/v') || github.event.inputs.release
-  #   needs: [build]
-  #   strategy:
-  #     matrix:
-  #       target:
-  #         - x86_64-unknown-linux-gnu
-  #         - x86_64-pc-windows-msvc
-  #         - aarch64-apple-darwin
-  #       include:
-  #         - target: x86_64-unknown-linux-gnu 
-  #           runner: ubuntu-latest
-  #           os: linux
-  #           arch: x86_64
-  #         - target: x86_64-pc-windows-msvc
-  #           runner: windows-latest
-  #           os: windows
-  #           arch: x86_64
-  #         - target: aarch64-apple-darwin
-  #           runner: macos-latest
-  #           os: darwin
-  #           arch: aarch64
-  #   runs-on: ${{ matrix.runner }}
-  #   steps:
-  #     - name: Download artifact
-  #       uses: actions/download-artifact@v5
-  #       with:
-  #         name: ${{ github.event.repository.name }}-${{ runner.os }}-${{ runner.arch }}
-
-  #     - name: Create release files (Linux and Mac)
-  #       if: matrix.target != 'x86_64-pc-windows-msvc'
-  #       run: |
-  #         for file in $(find . -type f); do
-  #           name="$(basename $file)-${{ matrix.target }}.zip"
-  #           zip -r "${name}" "$file"
-  #           shasum -a 256 "${name}" > "${name}.sha256sum"
-  #         done
-
-  #     - name: Create release files (Windows)
-  #       if: matrix.target == 'x86_64-pc-windows-msvc'
-  #       run: |
-  #         foreach ($item in Get-ChildItem) {
-  #           $name = "$($item.Name)-${{ matrix.target }}.zip"
-  #           Compress-Archive -Path $item.FullName -DestinationPath $name
-  #           Get-FileHash $name -Algorithm SHA256 > "$name.sha256sum"
-  #         }
-
-  #     - name: Upload a Build Artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: release
-  #         path: |
-  #           *.zip
-  #           *.sha256sum
-  #         retention-days: 1
-
   build:
     permissions:
       contents: read
@@ -145,6 +80,6 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-${{ runner.os }}-${{ runner.arch }}${{ github.event_name == 'pull_request' && join('-', github.event.pull_request.number) || '' }}
+          name: ${{ github.event.repository.name }}-${{ matrix.os }}-${{ matrix.arch }}${{ github.event_name == 'pull_request' && join('-', github.event.pull_request.number) || '' }}
           path: ${{ env.release && steps.pre_release.outputs.paths || steps.find_bin_paths.outputs.paths }}
           retention-days: 1
