--- a/.github/workflows/version_bump.yml
+++ b/.github/workflows/version_bump.yml
@@ -18,45 +18,58 @@ on:
           - major
 
 jobs:
-  build:
+  version_bump:
     permissions:
       contents: write
+      pull-requests: write
     name: version bump
     runs-on: ubuntu-latest
 
     steps:
-      - uses: denoland/setup-deno@v2
-
-      # https://github.com/actions/cache/blob/main/examples.md#deno 
-      # https://github.com/actions/cache/blob/main/examples.md#rust---cargo
-      - name: Restore cache
-        uses: actions/cache@v4
-        if: ${{ always() }}
-        with:
-          key: ${{ runner.os }}-version-bump
-          path: |
-            ~/.deno
-            ~/.cache/deno
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-
       # https://stackoverflow.com/a/76690393
       - name: Set git config
         run: |
-          git config --local user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
-          git config --local user.name "$(gh api /users/${GITHUB_ACTOR} | jq .name -r)"
+          git config --global user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.name "$(gh api /users/${GITHUB_ACTOR} | jq .name -r)"
           git config -l
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: denoland/setup-deno@v2
 
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for accurate version bumping
+      
+      - name: Out cache key
+        id: cache_key
+        run: HASH=${{ hashFiles('scripts/deno.lock') }}; echo "key=version-bump-${HASH:0:7}" >> $GITHUB_OUTPUT
+
+      # https://github.com/actions/cache/blob/main/examples.md#deno 
+      # https://github.com/actions/cache/blob/main/examples.md#rust---cargo
+      - name: Restore cache
+        uses: actions/cache/restore@v4
+        with:
+          key: ${{ steps.cache_key.outputs.key }}
+          path: |
+            ~/.deno
+            ~/.cache/deno
+            ~/.cargo
 
       - name: Setup tools
         run: |
           deno install --config ./scripts/deno.json
-          ./scripts/release/install_tools.ts
+          cargo install cargo-edit
+          cargo install git-cliff
+
+      - name: Save cache
+        uses: actions/cache/save@v4
+        with:
+          key: ${{ steps.cache_key.outputs.key }}
+          path: |
+            ~/.deno
+            ~/.cache/deno
+            ~/.cargo
 
       - name: Run version bump
         id: bump_version
@@ -69,6 +82,8 @@ jobs:
 
       - name: Create PR
         run: ./scripts/release/02_create_pr.ts --version ${{ steps.bump_version.outputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Tag
-        run: ./scripts/release/03_create_tag.ts --version ${{ steps.bump_version.outputs.version }}
+      # - name: Create Tag
+      #   run: ./scripts/release/03_create_tag.ts --version ${{ steps.bump_version.outputs.version }}
