--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,14 @@ on:
         type: string
 
 jobs:
+  docker:
+    if: startsWith(github.ref, 'refs/tags/v') || inputs.tag
+    permissions:
+      packages: write
+    uses: ./.github/workflows/docker.yml
+    with:
+      version_value: ${{ inputs.tag || github.ref }}
+
   release:
     needs: [build]
     if: startsWith(github.ref, 'refs/tags/v') || inputs.tag
